# MlFlow-intro

./: README.md  model_log.py  pyproject.toml  query.py
mlruns/0/: meta.yaml
mlruns/1/: meta.yaml
mlruns/1/41f73f45f65a49cbbea2f9fb590ca2c1/: meta.yaml
mlruns/1/41f73f45f65a49cbbea2f9fb590ca2c1/artifacts/classifier/: MLmodel
mlruns/1/41f73f45f65a49cbbea2f9fb590ca2c1/metrics/: accuracy
mlruns/1/41f73f45f65a49cbbea2f9fb590ca2c1/tags/: mlflow.log-model.history
mlruns/1/7f4eb4e26ef0432b9bdeb8e5e56bd8e2/: meta.yaml
mlruns/1/7f4eb4e26ef0432b9bdeb8e5e56bd8e2/artifacts/classifier/: MLmodel
mlruns/1/7f4eb4e26ef0432b9bdeb8e5e56bd8e2/metrics/: accuracy
mlruns/1/7f4eb4e26ef0432b9bdeb8e5e56bd8e2/tags/: mlflow.log-model.history
mlruns/1/c55d09c77cea410b80be315254c27313/: meta.yaml
mlruns/1/c55d09c77cea410b80be315254c27313/artifacts/classifier/: MLmodel
mlruns/1/c55d09c77cea410b80be315254c27313/metrics/: accuracy
mlruns/1/c55d09c77cea410b80be315254c27313/tags/: mlflow.log-model.history  mlflow.source.name
mlruns/1/dfa3920319284051b6f2289df504a602/: meta.yaml
mlruns/1/dfa3920319284051b6f2289df504a602/artifacts/classifier/: MLmodel  conda.yaml  model.pkl
mlruns/1/dfa3920319284051b6f2289df504a602/metrics/: accuracy
mlruns/1/dfa3920319284051b6f2289df504a602/tags/: mlflow.log-model.history
mlruns/1/f608bed0a01a4dfe96d0182c18e6093e/: meta.yaml
mlruns/1/f608bed0a01a4dfe96d0182c18e6093e/metrics/: accuracy
mlruns/1/f608bed0a01a4dfe96d0182c18e6093e/tags/: mlflow.log-model.history  mlflow.source.git.commit
(+2 files in other folders)
