[tool.poetry]
name = "mlflow intro tutorial"
version = "0.1.0"
description = "Training for better logging"
authors = ["AbinavRavi <abinav.ravi@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
pandas = "^1.4.3"
mlflow = "^1.27.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
